--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body { color:#333; }
-.profile-pic { width:170px; height:170px; object-fit:cover; }
+.profile-pic { width:170px; height:170px; object-fit:cover;object-position: 50% 30%;border-radius: 50%;}
 .social-icons a { opacity:0.85; }
 .social-icons a:hover { opacity:1; }
 .object-cover { object-fit: cover; }
